# python-fwt

./: LICENSE  README.md  justfile  main.py  pyproject.toml
.github/workflows/: python-app.yml
fwt/: __init__.py  _authority.py  authority.py  serialization.py
tests/: test_fwt.py  test_serialization.py
