[project]
name = "fwt"
version = "0.1.0"
description = "Fernet (symmetrically signed and encrypted) Web Tokens"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.7",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "isort>=6.0.1",
    "pytest>=8.4.2",
]

[tool.isort]
profile = "black"
