[project]
name = "fwt"
version = "1.0.0b2"
description = "Fernet (symmetrically signed and encrypted) Web Tokens"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.7",
]
classifiers = []
authors = [
  { name = "Sam Santi", email = "redshadow@hackzine.org" },
]

[project.urls]
Homepage = "https://github.com/rshk/python-fwt"
Repository = "https://github.com/rshk/python-fwt"
Issues = "https://github.com/rshk/python-fwt/issues"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "isort>=6.0.1",
    "pytest>=8.4.2",
]

[tool.isort]
profile = "black"
